@@ -1,3 +1,10 @@
+2005-01-28  Vincent Untz  <vincent@vuntz.net>
+
+	* libgnomevfs/gnome-vfs-uri.c: (gnome_vfs_uri_extract_short_name): fix
+	to never return NULL. This happened with URIs that have encoded / in
+	the filename.
+	Fix bug #157723
+
 2005-01-28  Christian Kellner  <gicmo@gnome.org>
 
 	* modules/http-neon-method.c (http_get_file_info): Close the connection
